# structured-interface

./: CMakeLists.txt  README.md
scripts/: bake-simple-font.py
src/structured-interface/: anchor.cc  anchor.hh  demo.cc  demo.hh  dummy.cc  element_tree.cc  element_tree.hh  element_type.hh  enums.hh  fwd.hh  gui.cc  gui.hh  handles.hh  input_state.cc  input_state.hh  options.hh  properties.cc  properties.hh  recorded_ui.cc  recorded_ui.hh  si.cc  si.hh  style.hh  vertices.hh
src/structured-interface/detail/: debug.cc  debug.hh  hash.hh  record.hh  recorder.cc  recorder.hh  traits.hh  ui_context.hh
src/structured-interface/layout/: aabb_layout.cc  aabb_layout.hh
src/structured-interface/merger/: Default2DMerger.cc  Default2DMerger.font.cc  Default2DMerger.hh  Default2DMerger.layout.cc  Default2DMerger.ui.cc  Simple2DMerger.cc  Simple2DMerger.font.cc  Simple2DMerger.hh  Simple2DMerger.stats.cc  StyleSheet.cc  StyleSheet.hh  editable_text.cc  editable_text.hh
src/structured-interface/process/: html.cc  html.hh
